# sibotr2

./: README.md
ackm_bringup/: CMakeLists.txt  package.xml
ackm_bringup/config/: ros_gz_bridge.yaml  ros_gz_bridge_ackm1.yaml  ros_gz_bridge_sibot.yaml
ackm_bringup/launch/: htrack1_ackm1_train.launch.py  htrack1_sibot.launch.py  saye.launch.py  track1.launch.py  track1_ackm1.launch.py  track1_ackm1_drive.launch.py  track1_ackm1_train.launch.py  train_model.launch.py  videopanel.launch.py  view_sibot.launch.py
ackm_bringup/rviz/: robot.rviz  saye.rviz
ackm_description/: CMakeLists.txt  CMakeLists.txt.old  package.xml
ackm_description/models/FNR2022_map/: map2022.sdf  model.config
ackm_description/models/FNR2022_map/materials/scripts/: fnr2022_map.material
ackm_description/models/ackm1/: model.config  model.sdf
ackm_description/models/dinamic_box/: model.config  model.sdf
ackm_description/models/saye/: model.sdf
ackm_description/models/sibot/: model.config  model.sdf
ackm_description/models/videopanel (Copy)/: model.config  model.sdf
ackm_description/models/videopanel0/: model.config  model.sdf
ackm_description/models/videopanel1/: model.config  model.sdf
ackm_description/models/videopanel2/: model.config  model.sdf
ackm_description/models/videopanel3/: model.config  model.sdf
ackm_description/models/videopanel4/: model.config  model.sdf
ackm_description/models/videopanel5/: model.config  model.sdf
ackm_description/scripts/: signal.sh
ackm_description/src/: DynamicTexturePlugin.cc  gzDynamicTexturePlugin (Copy).cc  gzDynamicTexturePlugin.cc  videopanel (Copy).cpp  videopanel.cpp
ackm_description/worlds/: saye_world.sdf  track1 (Copy).sdf  track1.sdf
ackm_mldrive/: CMakeLists.txt  package.xml  setup.py
ackm_mldrive/launch/: write_data.launch.py
ackm_mldrive/scripts/: model_drive.py  train_model.py  utils.py  write_data.py
