<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackm_mldrive</name>
  <version>0.0.0</version>
  <description>Contains ml driving on tracks for the sibo project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>who</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

